# locations

./: .editorconfig  .gitignore  sample_item.json
data-processing/: README.md  functional-data-processing.ipynb  processing-location-data.ipynb  pyproject.toml
data-processing/data_processing/: __init__.py  process_checkins.py  process_to_dfs.py  pull_in_data_files.py
foursquare-export/: checkins1.csv  checkins1.json  checkins10.csv  checkins10.json  checkins11.csv  checkins11.json  checkins12.csv  checkins12.json  checkins13.csv  checkins13.json  checkins14.csv  checkins14.json  checkins15.csv  checkins15.json  checkins2.csv  checkins2.json  checkins3.csv  checkins3.json  checkins4.csv  checkins4.json  checkins5.csv  checkins5.json  checkins6.csv  checkins6.json  checkins7.csv  checkins7.json  checkins8.csv  checkins8.json  checkins9.csv  checkins9.json  comments.csv  comments.json  expertise.csv  expertise.json  lists.csv  lists.json  photos.csv  photos.json  plans.csv  plans.json  (+8 more)
