[tool.poetry]
authors = ["Aram Zucker-Scharff <aramzs@hacktext.com>"]
description = ""
name = "data-processing"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.13"
pendulum = "^3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
